--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Terapia Cura Emocional</title>
 
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Signika:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- Link to compiled CSS -->
     <link rel="stylesheet" href="/src/css/style.css" />
   </head>
 
@@ -26,58 +33,90 @@
     </symbol>
   </svg>
 
+  <!--gradient-circle-->
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+    <defs>
+      <linearGradient id="circleGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+        <stop offset="0%" stop-color="#08b8be" />
+        <stop offset="100%" stop-color="#a8cf91" />
+      </linearGradient>
+    </defs>
+
+    <symbol id="gradient-circle" viewBox="0 0 120 120">
+      <circle cx="60" cy="60" r="60" fill="url(#circleGradient)" />
+    </symbol>
+  </svg>
+  <!--end icons-->
+
   <body>
-    <section id="main">
-      <div>
-        <img
-          src="/src/images/logo-terapia-cura-emocional.webp"
-          alt="Logo da Terapia Cura Emocional"
-        />
-      </div>
-      <div>
-        <h1>Enfrentando desafios com ansiedade, depressão ou traumas?</h1>
-        <h2>Terapia alternative online</h2>
-        <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
-          >Agendar Sessão ⬇️</a
-        >
-      </div>
-      <div>
-        <img
-          src="/src/images/Mutisia Profile EFTclub.webp"
-          alt="Foto da terapeuta Mutisia"
-        />
-        <p>Terapeuta Mutisia</p>
-        <ul>
-          <li>
-            <a href="https://wa.me/5521920172600" target="_blank">
-              <img src="/src/images/whatsapp-icon.svg" alt="" />
-            </a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/eftclub_terapias/"
-              target="_blank"
+    <div class="background_main">
+      <section id="main">
+        <div class="banner">
+          <img
+            src="/src/images/logo-terapia-cura-emocional.webp"
+            alt="Logo da Terapia Cura Emocional"
+          />
+        </div>
+        <div class="content">
+          <div class="proposta">
+            <h1>Enfrentando desafios com ansiedade, depressão ou traumas?</h1>
+            <h2>Terapia alternative online</h2>
+            <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+              >Agendar Sessão ⬇️</a
             >
-              <img src="/src/images/instagram-icon.svg" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="https://www.tiktok.com/@eftclub" target="_blank">
-              <img src="/src/images/tiktok-icon.svg" alt="" />
-            </a>
-          </li>
-        </ul>
-      </div>
-    </section>
+          </div>
+          <div class="terapeuta">
+            <img
+              src="/src/images/Mutisia Profile EFTclub.webp"
+              alt="Foto da terapeuta Mutisia"
+            />
+            <p>Terapeuta Mutisia</p>
+            <ul>
+              <li>
+                <a href="https://wa.me/5521920172600" target="_blank">
+                  <img src="/src/images/whatsapp-icon.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.instagram.com/eftclub_terapias/"
+                  target="_blank"
+                >
+                  <img src="/src/images/instagram-icon.svg" alt="" />
+                </a>
+              </li>
+              <li>
+                <a href="https://www.tiktok.com/@eftclub" target="_blank">
+                  <img src="/src/images/tiktok-icon.svg" alt="" />
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </div>
+    <!-- end background_main-->
 
     <section id="about">
       <div>
         <h2>Terapia especializada em:</h2>
         <ul>
-          <li>ansiedade</li>
-          <li>depressão</li>
-          <li>Traumas</li>
-          <li>Entre outros</li>
+          <li>
+            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <span>ansiedade</span>
+          </li>
+          <li>
+            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <span>depressão</span>
+          </li>
+          <li>
+            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <span>Traumas</span>
+          </li>
+          <li>
+            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <span>Entre</span> outros
+          </li>
         </ul>
         <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
           >Agendar Sessão</a
