--- a/src/index.html
+++ b/src/index.html
@@ -32,20 +32,6 @@
       </g>
     </symbol>
   </svg>
-
-  <!--gradient-circle-->
-  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-    <defs>
-      <linearGradient id="circleGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-        <stop offset="0%" stop-color="#08b8be" />
-        <stop offset="100%" stop-color="#a8cf91" />
-      </linearGradient>
-    </defs>
-
-    <symbol id="gradient-circle" viewBox="0 0 120 120">
-      <circle cx="60" cy="60" r="60" fill="url(#circleGradient)" />
-    </symbol>
-  </svg>
   <!--end icons-->
 
   <body>
@@ -59,9 +45,14 @@
         </div>
         <div class="content">
           <div class="proposta">
-            <h1>Enfrentando desafios com ansiedade, depressão ou traumas?</h1>
-            <h2>Terapia alternative online</h2>
-            <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+            <h1 class="title">
+              Enfrentando desafios com ansiedade, depressão ou traumas?
+            </h1>
+
+            <h2 class="subtitle">Terapia alternative online</h2>
+            <a
+              href="https://eftclub.com/contact-us-on-whatsapp"
+              class="btn full-btn"
               >Agendar Sessão ⬇️</a
             >
           </div>
@@ -91,6 +82,12 @@
                 </a>
               </li>
             </ul>
+            <!-- <div class="mobile">
+              <h2>Terapia alternative online</h2>
+              <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+                >Agendar Sessão ⬇️</a
+              >
+            </div> -->
           </div>
         </div>
       </section>
@@ -98,7 +95,7 @@
     <!-- end background_main-->
 
     <section id="about">
-      <div>
+      <div class="especilização">
         <h2>Terapia especializada em:</h2>
         <ul>
           <li>
@@ -115,14 +112,14 @@
           </li>
           <li>
             <img src="/src/images/gradient-cricle.svg" alt="" />
-            <span>Entre</span> outros
+            <span>Entre outros</span>
           </li>
         </ul>
         <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
           >Agendar Sessão</a
         >
       </div>
-      <div>
+      <div class="saber-mais">
         <p>
           Sintomas como ansiedade e depressão resultam do acúmulo de vivências
           de medo e tristeza ao longo da vida. Através da terapia, ajudo você a
