--- a/src/index.html
+++ b/src/index.html
@@ -44,11 +44,10 @@
           />
         </div>
         <div class="content">
+          <h1 class="title">
+            Enfrentando desafios com ansiedade, depressão ou traumas?
+          </h1>
           <div class="proposta">
-            <h1 class="title">
-              Enfrentando desafios com ansiedade, depressão ou traumas?
-            </h1>
-
             <h2 class="subtitle">Terapia alternative online</h2>
             <a
               href="https://eftclub.com/contact-us-on-whatsapp"
@@ -82,12 +81,6 @@
                 </a>
               </li>
             </ul>
-            <!-- <div class="mobile">
-              <h2>Terapia alternative online</h2>
-              <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
-                >Agendar Sessão ⬇️</a
-              >
-            </div> -->
           </div>
         </div>
       </section>
@@ -115,7 +108,9 @@
             <span>Entre outros</span>
           </li>
         </ul>
-        <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+        <a
+          href="https://eftclub.com/contact-us-on-whatsapp"
+          class="btn btn-mobile"
           >Agendar Sessão</a
         >
       </div>
@@ -126,7 +121,9 @@
           trazer à tona essas memórias e liberar as emoções vinculadas a elas,
           eliminando assim a carga emocional que ainda impacta o seu presente.
         </p>
-        <p>Saiba mais sobre o processo terapêutico e as técnicas utilizadas:</p>
+        <p class="saiba-mais">
+          Saiba mais sobre o processo terapêutico e as técnicas utilizadas:
+        </p>
         <ul>
           <li><a href="" class="btn">EFT</a></li>
           <li><a href="" class="btn">Processo Terapêutico</a></li>
