--- a/src/index.html
+++ b/src/index.html
@@ -92,19 +92,19 @@
         <h2>Terapia especializada em:</h2>
         <ul>
           <li>
-            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <img src="/src/images/icon_gradient-circle.svg" alt="" />
             <span>ansiedade</span>
           </li>
           <li>
-            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <img src="/src/images/icon_gradient-circle.svg" alt="" />
             <span>depressão</span>
           </li>
           <li>
-            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <img src="/src/images/icon_gradient-circle.svg" alt="" />
             <span>Traumas</span>
           </li>
           <li>
-            <img src="/src/images/gradient-cricle.svg" alt="" />
+            <img src="/src/images/icon_gradient-circle.svg" alt="" />
             <span>Entre outros</span>
           </li>
         </ul>
@@ -125,115 +125,110 @@
           Saiba mais sobre o processo terapêutico e as técnicas utilizadas:
         </p>
         <ul>
-          <li><a href="" class="btn">EFT</a></li>
-          <li><a href="" class="btn">Processo Terapêutico</a></li>
-          <li><a href="" class="btn">TRG</a></li>
+          <li><a href="" class="btn btn_border">EFT</a></li>
+          <li><a href="" class="btn btn_border">Processo Terapêutico</a></li>
+          <li><a href="" class="btn btn_border">TRG</a></li>
         </ul>
       </div>
     </section>
 
-    <section id="testimony">
-      <div>
-        <h2>
+    <div class="background_testimony">
+      <section id="testimony">
+        <h2 class="testimony_title">
           Confira os depoimentos de quem já passou pelo processo terapêutico
         </h2>
-        <ul>
-          <li>
-            <img
-              src="/src/images/five-stars-eftclub.svg"
-              alt="Avaliação de cinco estrelas"
-            />
-          </li>
-          <li><p>Avaliação do Google</p></li>
-        </ul>
-        <img
-          src="/src/images/Registro-Profissional-ABRATH.webp"
-          alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
-        />
-        <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
-          >Agendar Sessão</a
-        >
-      </div>
-      <div>
-        <img
-          src="/src/images/Avalicoes-do-Google.webp"
-          alt="Captura de tela com três avaliações positivas no Google sobre a terapeuta Mutisia. As avaliações são de Vera, Nayany e Nayara. Vera comenta que se sente mais leve e recomenda muito a terapeuta. Nayany descreve como o acompanhamento com Mutisia a ajudou a transformar sua visão da vida e curar sua criança interior, expressando gratidão. Nayara diz que a técnica é impressionante e relata mudanças significativas em comparação com a terapia convencional. Todas as avaliações exibem nota máxima de cinco estrelas."
-        />
-        <a
-          href="https://www.google.com/search?sca_esv=c14fbbbc00866f01&sca_upv=1&uds=ADvngMjcH0KdF7qGWtwTBrP0nt7dvUrjEY9yXM9xwtUzsnjC6khZv8pQnU2z1MQAj71WOR7EyUWUYV0SCA5GX1BXxOSrhvNV5ncoK37tV_MbvR3SIP93OloDpd48yY9rPMFtr7gVh5Tv&si=ACC90nwjPmqJHrCEt6ewASzksVFQDX8zco_7MgBaIawvaF4-7txJenWgQIzhouFdz8deP3EKT5iE0Png2uRVsozCxI6dllSJG1S3nEfUm1raJTurgS5OBlrsHDwMTsW6M_wyzzQGJPz8&q=EFTclub+Reviews&hl=en-DK&sa=X&ved=2ahUKEwjy1_PShvWHAxUdDRAIHfQiBIgQ_4MLegQILxAM&biw=1309&bih=695&dpr=2.2"
-          target="_blank"
-          class="btn"
-          >Ler mais depoimentos</a
-        >
-      </div>
-    </section>
+        <div class="testimony_abrath">
+          <ul>
+            <li>
+              <img
+                src="/src/images/five-stars-eftclub.svg"
+                alt="Avaliação de cinco estrelas"
+              />
+            </li>
+            <li><p>Avaliação do Google</p></li>
+          </ul>
+          <img
+            src="/src/images/Registro-Profissional-ABRATH.webp"
+            alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
+          />
+          <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
+            >Agendar Sessão</a
+          >
+        </div>
+        <div class="testimony_testimony">
+          <img
+            src="/src/images/Avalicoes-do-Google.webp"
+            alt="Captura de tela com três avaliações positivas no Google sobre a terapeuta Mutisia. As avaliações são de Vera, Nayany e Nayara. Vera comenta que se sente mais leve e recomenda muito a terapeuta. Nayany descreve como o acompanhamento com Mutisia a ajudou a transformar sua visão da vida e curar sua criança interior, expressando gratidão. Nayara diz que a técnica é impressionante e relata mudanças significativas em comparação com a terapia convencional. Todas as avaliações exibem nota máxima de cinco estrelas."
+          />
+          <a
+            href="https://www.google.com/search?sca_esv=c14fbbbc00866f01&sca_upv=1&uds=ADvngMjcH0KdF7qGWtwTBrP0nt7dvUrjEY9yXM9xwtUzsnjC6khZv8pQnU2z1MQAj71WOR7EyUWUYV0SCA5GX1BXxOSrhvNV5ncoK37tV_MbvR3SIP93OloDpd48yY9rPMFtr7gVh5Tv&si=ACC90nwjPmqJHrCEt6ewASzksVFQDX8zco_7MgBaIawvaF4-7txJenWgQIzhouFdz8deP3EKT5iE0Png2uRVsozCxI6dllSJG1S3nEfUm1raJTurgS5OBlrsHDwMTsW6M_wyzzQGJPz8&q=EFTclub+Reviews&hl=en-DK&sa=X&ved=2ahUKEwjy1_PShvWHAxUdDRAIHfQiBIgQ_4MLegQILxAM&biw=1309&bih=695&dpr=2.2"
+            target="_blank"
+            class="btn btn_border"
+            >Ler mais depoimentos</a
+          >
+        </div>
+      </section>
+    </div>
 
     <section id="price">
       <div>
         <h2>Preço das Sessões</h2>
       </div>
-      <div>
-        <div>
-          <h3>Adquirindo uma sessão por vez</h3>
+      <div class="prices">
+        <div class="individual">
+          <h3>Adquirindo Uma Sessão por Vez</h3>
           <ul class="benefits-list">
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_mark.svg" alt="" />
               <span>Terapia online por videoconferência.</span>
             </li>
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_mark.svg" alt="" />
               <span>Sessões com duração de 1h a 1h30.</span>
             </li>
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_mark.svg" alt="" />
               <span>Anamnese e aplicação de técnicas alternativas.*</span>
             </li>
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_mark.svg" alt="" />
               <span>
                 Suporte contínuo pelo WhatsApp para tirar dúvidas em qualquer
                 momento do processo.
               </span>
             </li>
           </ul>
-
-          <p class="price">R$ 145</p>
-          <p>Por sessão</p>
-          <p class="obs">Técnicas alternativas: Causa Raiz, EFT e TRG</p>
+          <div class="price_container">
+            <p class="price">R$ 145</p>
+            <p>Por sessão</p>
+          </div>
           <a
             href="https://eftclub.com/contact-us-on-whatsapp"
             class="btn individual"
             >Agendar Sessão</a
           >
+          <p class="obs">*Técnicas alternativas: Causa Raiz, EFT e TRG</p>
         </div>
-        <div>
-          <h3>Adquirindo um pacote de quatro sessões</h3>
+        <div class="pacote">
+          <h3>Adquirindo Um Pacote de Quatro Sessões</h3>
           <ul>
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_mark.svg" alt="" />
               <span>Tudo do anterior</span>
             </li>
             <li>
-              <svg class="checkmark-icon" width="20" height="20">
-                <use href="#icon-check" />
-              </svg>
+              <img src="/src/images/icon_filled-mark.svg" alt="" />
               <span>18% de desconto</span>
             </li>
           </ul>
-          <p class="price">R$ 120</p>
-          <p>Por sessão</p>
-          <p>Somente com investimento à vista de</p>
-          <p class="price">R$ 480</p>
+          <div class="price_container">
+            <p class="price">R$ 120</p>
+            <p>Por sessão</p>
+          </div>
+          <div class="price_container">
+            <p>Somente com investimento à vista de:</p>
+            <p class="price">R$ 480</p>
+          </div>
           <a
             href="https://eftclub.com/contact-us-on-whatsapp"
             class="btn pacote"
@@ -272,7 +267,7 @@
             /></a>
           </li>
         </ul>
-        <a href="atendimento@eftclub.com">atendimento@eftclub.com</a>
+        <a href="mailto:atendimento@eftclub.com">atendimento@eftclub.com</a>
       </section>
       <section><img src="/src/images/logo-eftclub.webp" alt="" /></section>
       <section>
@@ -282,7 +277,7 @@
           tratamento médico.
         </p>
       </section>
-      <p>© All Rights Reserved (<span id="year">2025</span>)</p>
+      <p class="obs">© All Rights Reserved (<span id="year">2025</span>)</p>
     </footer>
   </body>
 </html>
