footer, links effects, btn hover border

--- a/src/index.html
+++ b/src/index.html
@@ -63,12 +63,17 @@
             <p>Terapeuta Mutisia</p>
             <ul>
               <li>
-                <a href="https://wa.me/5521920172600" target="_blank">
+                <a
+                  class="img_link"
+                  href="https://wa.me/5521920172600"
+                  target="_blank"
+                >
                   <img src="/src/images/whatsapp-icon.svg" alt="" />
                 </a>
               </li>
               <li>
                 <a
+                  class="img_link"
                   href="https://www.instagram.com/eftclub_terapias/"
                   target="_blank"
                 >
@@ -76,7 +81,11 @@
                 </a>
               </li>
               <li>
-                <a href="https://www.tiktok.com/@eftclub" target="_blank">
+                <a
+                  class="img_link"
+                  href="https://www.tiktok.com/@eftclub"
+                  target="_blank"
+                >
                   <img src="/src/images/tiktok-icon.svg" alt="" />
                 </a>
               </li>
@@ -116,10 +125,11 @@
       </div>
       <div class="saber-mais">
         <p>
-          Sintomas como ansiedade e depressão resultam do acúmulo de vivências
-          de medo e tristeza ao longo da vida. Através da terapia, ajudo você a
-          trazer à tona essas memórias e liberar as emoções vinculadas a elas,
-          eliminando assim a carga emocional que ainda impacta o seu presente.
+          Sintomas como <a href="">ansiedade</a> e depressão resultam do acúmulo
+          de vivências de medo e tristeza ao longo da vida. Através da terapia,
+          ajudo você a trazer à tona essas memórias e liberar as emoções
+          vinculadas a elas, eliminando assim a carga emocional que ainda
+          impacta o seu presente.
         </p>
         <p class="saiba-mais">
           Saiba mais sobre o processo terapêutico e as técnicas utilizadas:
@@ -207,7 +217,10 @@
             class="btn individual"
             >Agendar Sessão</a
           >
-          <p class="obs">*Técnicas alternativas: Causa Raiz, EFT e TRG</p>
+          <p class="obs">
+            *Técnicas alternativas: <a href="">Causa Raiz</a>,
+            <a href="">EFT</a> e <a href="">TRG</a>.
+          </p>
         </div>
         <div class="pacote">
           <h3>Adquirindo Um Pacote de Quatro Sessões</h3>
@@ -239,45 +252,83 @@
     </section>
 
     <footer>
-      <section>
-        <p>Siga-nos nas redes sociais:</p>
-        <ul>
-          <li>
-            <a href="https://www.tiktok.com/@eftclub" target="_blank"
-              ><img src="/src/images/tiktok-icon.svg" alt=""
-            /></a>
-          </li>
-          <li>
-            <a href="https://www.youtube.com/@eftclub/" target="_blank"
-              ><img src="/src/images/youtube-icon.svg" alt=""
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.instagram.com/eftclub_terapias/"
-              target="_blank"
-              ><img src="/src/images/instagram-icon.svg" alt=""
-            /></a>
-          </li>
-          <li>
-            <a
-              href="https://www.facebook.com/profile.php?id=100080437803652"
-              target="_blank"
-              ><img src="/src/images/facebook-icon.svg" alt=""
-            /></a>
-          </li>
-        </ul>
-        <a href="mailto:atendimento@eftclub.com">atendimento@eftclub.com</a>
-      </section>
-      <section><img src="/src/images/logo-eftclub.webp" alt="" /></section>
-      <section>
-        <p>
-          Aviso Legal: As Terapias Holísticas e Integrativas são complementares
-          à medicina alopática, e não devem substituir nenhuma consulta e/ou
-          tratamento médico.
-        </p>
-      </section>
-      <p class="obs">© All Rights Reserved (<span id="year">2025</span>)</p>
+      <div class="background_divider">
+        <svg
+          xmlns="http://www.w3.org/2000/svg"
+          viewBox="0 0 1440 200"
+          preserveAspectRatio="none"
+          style="display: block; width: 100%; height: auto"
+        >
+          <path
+            d="M0,200 
+           C360,0 1080,0 1440,200 
+           L1440,0 L0,0 Z"
+            fill="#fff"
+          />
+        </svg>
+      </div>
+      <div class="background">
+        <div class="main">
+          <section class="contact">
+            <p>Siga-nos nas redes sociais:</p>
+            <ul>
+              <li>
+                <a
+                  class="img_link"
+                  href="https://www.tiktok.com/@eftclub"
+                  target="_blank"
+                  ><img src="/src/images/tiktok-icon.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="img_link"
+                  href="https://www.youtube.com/@eftclub/"
+                  target="_blank"
+                  ><img src="/src/images/youtube-icon.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="img_link"
+                  href="https://www.instagram.com/eftclub_terapias/"
+                  target="_blank"
+                  ><img src="/src/images/instagram-icon.svg" alt=""
+                /></a>
+              </li>
+              <li>
+                <a
+                  class="img_link"
+                  href="https://www.facebook.com/profile.php?id=100080437803652"
+                  target="_blank"
+                  ><img src="/src/images/facebook-icon.svg" alt=""
+                /></a>
+              </li>
+            </ul>
+            <p>
+              <a href="mailto:atendimento@eftclub.com"
+                >atendimento@eftclub.com</a
+              >
+            </p>
+          </section>
+
+          <section class="logo">
+            <img src="/src/images/logo-eftclub.webp" alt="" />
+          </section>
+
+          <section class="aviso_legal">
+            <p>
+              Aviso Legal: As Terapias Holísticas e Integrativas são
+              complementares à medicina alopática, e não devem substituir
+              nenhuma consulta e/ou tratamento médico.
+            </p>
+          </section>
+        </div>
+
+        <div class="rights_reserved">
+          <p class="obs">© All Rights Reserved (<span id="year">2025</span>)</p>
+        </div>
+      </div>
     </footer>
   </body>
 </html>
