before js animate

--- a/src/index.html
+++ b/src/index.html
@@ -13,6 +13,8 @@
 
     <!-- Link to compiled CSS -->
     <link rel="stylesheet" href="/src/css/style.css" />
+
+    <script src="/src/js/main.js" defer></script>
   </head>
 
   <!--icons-->
@@ -49,11 +51,7 @@
           </h1>
           <div class="proposta">
             <h2 class="subtitle">Terapia alternative online</h2>
-            <a
-              href="https://eftclub.com/contact-us-on-whatsapp"
-              class="btn full-btn"
-              >Agendar Sessão ⬇️</a
-            >
+            <a href="#price" class="btn full-btn">Agendar Sessão ↓</a>
           </div>
           <div class="terapeuta">
             <img
