depoimento popup concluded

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,9 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Terapia Cura Emocional</title>
+
+    <!-- JS -->
+    <script src="/src/js/main.js" defer></script>
 
     <!-- Google Fonts -->
     <link
@@ -14,7 +16,36 @@
     <!-- Link to compiled CSS -->
     <link rel="stylesheet" href="/src/css/style.css" />
 
-    <script src="/src/js/main.js" defer></script>
+    <!-- favicon -->
+    <link
+      rel="icon"
+      href="/public/favicon-16.png"
+      sizes="16x16"
+      type="image/png"
+    />
+    <link
+      rel="icon"
+      href="/public/favicon-32.png"
+      sizes="32x32"
+      type="image/png"
+    />
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="/public/apple-touch-icon.png"
+    />
+
+    <!-- SEO-->
+    <title>Terapia para Superação de Dores Emocionais</title>
+
+    <link rel="canonical" href="https://eftclub.com/terapia-cura-emocional" />
+
+    <meta
+      name="description"
+      content="Terapia para superação de dores emocionais. Não é sobre o sintoma, mas sobre o que está por trás do sintoma."
+    />
+
+    <meta name="robots" content="index, follow" />
   </head>
 
   <!--icons-->
@@ -165,16 +196,79 @@
         </div>
         <div class="testimony_testimony">
           <img
+            class="open-button img_link"
             src="/src/images/Avalicoes-do-Google.webp"
             alt="Captura de tela com três avaliações positivas no Google sobre a terapeuta Mutisia. As avaliações são de Vera, Nayany e Nayara. Vera comenta que se sente mais leve e recomenda muito a terapeuta. Nayany descreve como o acompanhamento com Mutisia a ajudou a transformar sua visão da vida e curar sua criança interior, expressando gratidão. Nayara diz que a técnica é impressionante e relata mudanças significativas em comparação com a terapia convencional. Todas as avaliações exibem nota máxima de cinco estrelas."
           />
-          <a
-            href="https://www.google.com/search?sca_esv=c14fbbbc00866f01&sca_upv=1&uds=ADvngMjcH0KdF7qGWtwTBrP0nt7dvUrjEY9yXM9xwtUzsnjC6khZv8pQnU2z1MQAj71WOR7EyUWUYV0SCA5GX1BXxOSrhvNV5ncoK37tV_MbvR3SIP93OloDpd48yY9rPMFtr7gVh5Tv&si=ACC90nwjPmqJHrCEt6ewASzksVFQDX8zco_7MgBaIawvaF4-7txJenWgQIzhouFdz8deP3EKT5iE0Png2uRVsozCxI6dllSJG1S3nEfUm1raJTurgS5OBlrsHDwMTsW6M_wyzzQGJPz8&q=EFTclub+Reviews&hl=en-DK&sa=X&ved=2ahUKEwjy1_PShvWHAxUdDRAIHfQiBIgQ_4MLegQILxAM&biw=1309&bih=695&dpr=2.2"
-            target="_blank"
-            class="btn btn_border"
-            >Ler mais depoimentos</a
-          >
+          <a class="btn btn_border open-button">Ler mais depoimentos</a>
         </div>
+
+        <dialog class="depoimentos_popup">
+          <a class="btn btn_border close-button">Fechar</a>
+
+          <ul>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-aleksandra.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-andressa.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-elisangela.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-lisandra.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-nayany.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-nayara.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-poliana.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-rogelio.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-sheila.webp"
+                alt=""
+              />
+            </li>
+            <li>
+              <img
+                src="/src/images/Depoimentos/depoimento-eftclub-vera.webp"
+                alt=""
+              />
+            </li>
+          </ul>
+        </dialog>
       </section>
     </div>
 
