--- a/src/index.html
+++ b/src/index.html
@@ -177,26 +177,42 @@
           Confira os depoimentos de quem já passou pelo processo terapêutico
         </h2>
         <div class="testimony_abrath">
-          <ul>
-            <li>
-              <img
-                src="/src/images/five-stars-eftclub.svg"
-                alt="Avaliação de cinco estrelas"
-              />
-            </li>
-            <li><p>Avaliação do Google</p></li>
-          </ul>
-          <img
-            src="/src/images/Registro-Profissional-ABRATH.webp"
-            alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
-          />
+          <a
+            href="https://maps.app.goo.gl/xdwBKmU5331wy8iDA"
+            target="_blank"
+            class="img_link"
+            ><ul>
+              <li>
+                <img
+                  loading="lazy"
+                  src="/src/images/five-stars-eftclub.svg"
+                  alt="Avaliação de cinco estrelas"
+                />
+              </li>
+              <li><p>Avaliação do Google</p></li>
+            </ul></a
+          >
+          <a
+            target="_blank"
+            href="https://www.abrath.org.br/localizar-filiados.php"
+            class="img_link"
+            ><img
+              loading="lazy"
+              width="900"
+              height="auto"
+              src="/src/images/Registro-Profissional-ABRATH.webp"
+              alt="Selo de registro profissional na Associação Brasileira dos Terapeutas Holísticos"
+          /></a>
           <a href="https://eftclub.com/contact-us-on-whatsapp" class="btn"
             >Agendar Sessão</a
           >
         </div>
         <div class="testimony_testimony">
           <img
-            class="open-button img_link"
+            loading="lazy"
+            width="900"
+            height="auto"
+            class="open-button"
             src="/src/images/Avalicoes-do-Google.webp"
             alt="Captura de tela com três avaliações positivas no Google sobre a terapeuta Mutisia. As avaliações são de Vera, Nayany e Nayara. Vera comenta que se sente mais leve e recomenda muito a terapeuta. Nayany descreve como o acompanhamento com Mutisia a ajudou a transformar sua visão da vida e curar sua criança interior, expressando gratidão. Nayara diz que a técnica é impressionante e relata mudanças significativas em comparação com a terapia convencional. Todas as avaliações exibem nota máxima de cinco estrelas."
           />
@@ -210,61 +226,91 @@
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-aleksandra.webp"
-                alt=""
+                alt="Aleksandra, 5 estrelas (2 anos atrás): experiência ímpar com EFT, processo de cura profundo, gratidão"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-andressa.webp"
-                alt=""
+                alt="Andressa, 5 estrelas (2 anos atrás): lembra memórias que fazem todo sentido, gratidão"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-elisangela.webp"
-                alt=""
+                alt="Elisangela, 5 estrelas (1 mês atrás): maravilhosaaaa, entendi minha criança interior, profissional nota 1000, super indico"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-lisandra.webp"
-                alt=""
+                alt="Lisandra, 5 estrelas (2 anos atrás): super atenciosa, me senti muito à vontade, parabéns pelo trabalho"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-nayany.webp"
-                alt=""
+                alt="Nayany, 5 estrelas (1 ano atrás): mudou minha visão, curou minha criança interior, encontrei paz interior, gratidão"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-nayara.webp"
-                alt=""
+                alt="Nayara, 5 estrelas (11 meses atrás): técnica impressionante, mudanças significativas comparadas à terapia convencional"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-poliana.webp"
-                alt=""
+                alt="Poliana, 5 estrelas (1 ano atrás): experiência maravilhosa, me senti acolhida e compreendida ❤️🙌"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-rogelio.webp"
-                alt=""
+                alt="Rogelio, 5 estrelas (1 mês atrás): em 1 mês de EFT me sinto leve e com paz, Muti é maravilhosa"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-sheila.webp"
-                alt=""
+                alt="Sheila, 5 estrelas (1 ano atrás): super acolhida, questões esclarecidas de forma clara e objetiva, super recomendo 😊"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
             <li>
               <img
                 src="/src/images/Depoimentos/depoimento-eftclub-vera.webp"
-                alt=""
+                alt="Vera, 5 estrelas (9 meses atrás): libertador, hoje me sinto leve, bagagem pesada ficou no passado, recomendo super"
+                loading="lazy"
+                width="300"
+                height="auto"
               />
             </li>
           </ul>
@@ -405,7 +451,13 @@
           </section>
 
           <section class="logo">
-            <img src="/src/images/logo-eftclub.webp" alt="" />
+            <img
+              loading="lazy"
+              width="512"
+              height="auto"
+              src="/src/images/logo-eftclub.webp"
+              alt=""
+            />
           </section>
 
           <section class="aviso_legal">
